--- a/app/index.pug
+++ b/app/index.pug
@@ -18,23 +18,7 @@ body
                 .header__navigation__contacts
                     .header__navigation__contacts_messangers
                         a(href="https://wa.me/4957777777" target="_blank")
-                            svg(width='26' height='26' viewbox='0 0 26 26' fill='none' xmlns='http://www.w3.org/2000/svg')
-                                path(fill-rule='evenodd' clip-rule='evenodd' d='M22.2117 3.7789C21.0125 2.57748 19.5856 1.62485 18.0137 0.976186C16.4419 ' +
-                                '0.327526 14.7564 -0.00426286 13.0548 4.13467e-05C5.91957 4.13467e-05 0.111037 5.77956 0.108153 12.8838C0.108153 15.1542 0.703714 ' +
-                                '17.3702 1.83571 19.3249L0 26L6.86266 24.2074C8.76095 25.2359 10.8877 25.7752 13.049 25.7761H13.0548C20.1885 25.7761 25.9971 19.9966 ' +
-                                '25.9999 12.8924C26.0048 11.1995 25.6726 9.52254 25.0224 7.95827C24.3721 6.39401 23.4168 4.97352 22.2117 3.7789ZM13.0548 23.6018H13.0504C11.1232 ' +
-                                '23.602 9.2314 23.0859 7.57358 22.1078L7.18135 21.8753L3.10903 22.9387L4.19489 18.9876L3.93965 18.5829C2.86214 16.8757 2.29173 14.8999 2.29428 ' +
-                                '12.8838C2.29717 6.97939 7.12367 2.17579 13.0591 2.17579C14.4727 2.17267 15.8728 2.4486 17.1785 2.98761C18.4842 3.52663 19.6695 4.31802 20.6658 ' +
-                                '5.316C21.6675 6.30921 22.4615 7.49016 23.0018 8.7906C23.5421 10.091 23.8181 11.4852 23.8138 12.8924C23.8109 18.7968 18.9844 23.6018 13.0548 ' +
-                                '23.6018ZM18.957 15.5805C18.6326 15.4183 17.0434 14.6404 16.7464 14.5328C16.4508 14.4252 16.2359 14.3721 16.0196 14.6935C15.8033 15.015 15.1832 ' +
-                                '15.7398 14.9943 15.9551C14.8054 16.1704 14.6165 16.1962 14.2935 16.0355C13.9705 15.8747 12.9279 15.5346 11.692 14.4381C10.7302 13.5841 10.0813 ' +
-                                '12.5307 9.89238 12.2078C9.70347 11.8849 9.87219 11.7112 10.0351 11.5505C10.1808 11.407 10.3582 11.1745 10.5197 10.9864C10.6812 10.7984 10.7345 ' +
-                                '10.665 10.8427 10.4497C10.9508 10.2344 10.8975 10.0464 10.8153 9.88565C10.7345 9.72347 10.0871 8.13902 9.81739 7.49462C9.55639 6.87031 9.28961 ' +
-                                '6.95355 9.09061 6.94494C8.88451 6.93655 8.67824 6.93272 8.47197 6.93346C8.30795 6.93762 8.14656 6.97546 7.99792 7.04461C7.84928 7.11376 7.7166 ' +
-                                '7.21273 7.60819 7.33531C7.31113 7.65823 6.47619 8.43611 6.47619 10.0206C6.47619 11.605 7.63559 13.1364 7.7971 13.3516C7.95861 13.5669 10.0784 ' +
-                                '16.8176 13.323 18.2126C14.0959 18.5442 14.6987 18.7422 15.1674 18.8915C15.9417 19.1369 16.6469 19.101 17.205 19.0192C17.8265 18.9274 19.1185 ' +
-                                '18.2413 19.3882 ' + '17.4893C19.6579 16.7373 19.6579 16.0929 19.5771 15.958C19.4964 15.823 19.2786 15.7412 18.957 15.5805Z'
-                                fill='white')
+                            img(src="./img/whatsapp.svg")
                     .header__navigation__contacts_numbers
                         a(href="tel:+77000011888") +7 700 001 18 88
                 .header__navigation__nav_menu
@@ -65,45 +49,42 @@ body
                         div 33
                         div cottages #[br] 214 yard² #[br] 597 yard²
 
-            .header__banner__deadlines.line-height22px
+            .header__banner__deadlines
                 p #[b Construction work] began in September 2021.
                 p #[b Completion date] for cottages - I quarter of 2022
                 p #[b The deadline] for the completion of the entire cottage town is the II quarter of 2022
 
     main
         section._1_about-project.container
-            h2 About project
+            h2.h2-title About project
             .about-project__wrap
-                .about-project__about-company
-                    p Elite closed cottage town in Nur-Sultan consisting of:
-                    b 36 cottages:
-                    ul
-                        li - 440 yard² on 1195 yard²
-                        li - 214 yard² on 597 yard²
-
-                .about-project__company-logo__box
-                    img.about-project__company-logo__img(src="./img/1_about-project_img.jpg")
-                    .about-project__company-logo__bg-color
-                    .about-project__company-logo__bg-dots
-
-                .about-project__about-company
-                    h3 About company
-                    p “MM Group” Group of Construction Companies is a modern and dynamically developing group of companies that provides a wide range of services in the construction business from design to turnkey delivery of facilities. She began her activities in the construction business in 2013 and has firmly established herself as a reliable Kazakhstani construction company not only in the territory of the Republic of Kazakhstan, but also abroad. The founder and CEO of the group of construction companies "MM Group" is Moldir Suyunshali.
-
-                .about-project__about-company
-
-                .about-project__about-company
-                    h3 Mission of company
-                    p The priority of the group of construction companies "MM Group" is a professional approach with the use of innovative solutions in the construction of objects under construction, an experienced team, high-quality materials and timeliness of delivery of objects with an affordable opportunity to purchase not only housing, but also other real estate objects.
-
-                .about-project__about-company
-                    h3 Company goal
-                    p Strengthening the status of a company that is able to provide consumers with affordable and high-quality real estate on time. Development, reliability and quality!
-
+                .about-project__wrap-inner
+                    .about-project__about-company
+                        p Elite closed cottage town in Nur-Sultan consisting of:
+                        h3 36 cottages:
+                        ul
+                            li
+                                p - 440 yard² on 1195 yard²
+                            li
+                                p - 214 yard² on 597 yard²
+                    .about-project__about-company
+                        h3 About company
+                        p “MM Group” Group of Construction Companies is a modern and dynamically developing group of companies that provides a wide range of services in the construction business from design to turnkey delivery of facilities. She began her activities in the construction business in 2013 and has firmly established herself as a reliable Kazakhstani construction company not only in the territory of the Republic of Kazakhstan, but also abroad. The founder and CEO of the group of construction companies "MM Group" is Moldir Suyunshali.
+                    .about-project__about-company
+                        h3 Mission of company
+                        p The priority of the group of construction companies "MM Group" is a professional approach with the use of innovative solutions in the construction of objects under construction, an experienced team, high-quality materials and timeliness of delivery of objects with an affordable opportunity to purchase not only housing, but also other real estate objects.
+                .about-project__wrap-inner
+                    .about-project__company-logo__box
+                        img.about-project__company-logo__img(src="./img/1_about-project_img.jpg")
+                        .about-project__company-logo__bg-color
+                        .about-project__company-logo__bg-dots
+                    .about-project__about-company
+                        h3 Company goal
+                        p Strengthening the status of a company that is able to provide consumers with affordable and high-quality real estate on time. Development, reliability and quality!
 
         section._2_slider
             .container
-                h2 Cottages
+                h2.h2-title Cottages
                 .slider__wrap
                     .slider__slides
                         .slider__box
@@ -130,13 +111,13 @@ body
 
         section._3_location.container
             .location__content
-                h2 Location
+                h2.h2-title Location
                 p Closed cottage village Nura Elite is located in an elite and promising area of the capital, next to the green belt in the neighborhood of Vella Village.
                 p Nura Elite is a great space for solitude and active family life in harmony with nature, without city noise and with convenient transport interchange.
-            .location__map
+            .location__map-box
                 img.location__map__img(src="./img/3_location_img-map.jpg" alt="Map" title="Map")
                 div.location__map__bg-color
-                img.location__map__bg-dots(src="./img/_3_location__dots.svg" alt)
+                .location__map__bg-dots
 
 
         section._4_advantages
@@ -144,7 +125,7 @@ body
                 img.advantages__dots(src="./img/dots.svg")
                 img.advantages__bg(src="./img/4_advantages_bg.svg")
                 .advantages__content-box
-                    h2 The main advantages #[br] of the town
+                    h2.h2-title The main advantages #[br] of the town
                     ul
                         li
                             img(src="./img/4_advantages_icon-map.svg")
@@ -174,12 +155,12 @@ body
 
 
         section._5_why-nura.container
-            h2 Why NURA ELITE?
+            h2.h2-title Why NURA ELITE?
             .why__nura__content-box
                 .why-nura__img-box
                     img.why-nura__img(src="./img/5_why-nura_img.jpg")
                     .why-nura__bg-color
-                    img.why-nura__bg-dots(src="./img/_3_location__dots.svg")
+                    .why-nura__bg-dots
                 ul
                     li
                         img(src="./img/5_why-nura_icon-lightning.svg")
@@ -205,7 +186,7 @@ body
                             p The heating system and hot water is one common gas tank for the entire town, functioning at the expense of gas.
 
         section._6_technologies.container
-            h2 Building technology
+            h2.h2-title Building technology
             .technologies__content-box
                 ul
                     li
@@ -237,7 +218,7 @@ body
                             | High frost resistance, fire safety, good sound and heat insulation, tightness, increased strength, weather resistance.
                             | for both humans and the environment. They do not contain asbestos, consist of environmentally friendly natural ingredients: 82-85% cement, wood fiber, weight loss additives, organosilicon compounds
             .technologies__download-presentation
-                h2 Download presentation
+                h2.h2-title Download presentation
                 p Leave your contacts and we will send you
                 form
                     input(type="text" placeholder="Your name")
@@ -245,7 +226,7 @@ body
                     input(type="submit")
 
         section._7_payments.container
-            h2 Payment methods
+            h2.h2-title Payment methods
             ul
                 li
                     img(src="./img/7_payments_icon-1.svg")
@@ -259,13 +240,13 @@ body
                 li
                     img(src="./img/7_payments_icon-4.svg")
                     p Payment with #[br] cryptocurrency (Bitcoin)
-            .payments__adress
-                .payments__adress__map
+            .payments__address
+                .payments__address__map
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2503.755751349219!2d71.42242228172763!3d51.13141316940208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424586a04e901251%3A0x5047617e2afb5feb!2z0JjQt9GD0LzRgNGD0LTQvdGL0Lkg0LrQsi3Quywg0YPQuy4g0JTQuNC90LzRg9GF0LDQvNC10LTQsCDQmtGD0L3QsNC10LLQsCAxMCwg0J3Rg9GALdCh0YPQu9GC0LDQvSAwMjAwMDAsINCa0LDQt9Cw0YXRgdGC0LDQvQ!5e0!3m2!1sru!2sua!4v1646328085084!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                .payments__adress__contacts
-                    h2 Contacts
+                .payments__address__contacts
+                    h2.h2-title Contacts
                     p st. Kunaeva 10, business center "Emerald", block - A, floor 1
-                    .payments__adress__contacts-box
+                    .payments__address__contacts-box
                         ul
                             li
                                 img(src="./img/phone-black.svg")
