--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -271,7 +271,7 @@ main
             top: 16px
             left: 20px
             z-index: 1
-            background: url("../img/_3_location__dots.svg")
+            background: url("../img/3_location__dots.svg")
 
         .about-project__company-logo__box:hover
           img.about-project__company-logo__img
@@ -398,7 +398,7 @@ main
         top: 9px
         left: 20px
         z-index: 1
-        background: url("../img/_3_location__dots.svg")
+        background: url("../img/3_location__dots.svg")
 
     .location__map-box:hover
       .location__map__img
@@ -506,7 +506,7 @@ main
           top: 9px
           right: 25px
           z-index: 1
-          background: url("../img/_3_location__dots.svg")
+          background: url("../img/3_location__dots.svg")
 
       .why-nura__img-box:hover
         img.why-nura__img
